# beam

./: .gitignore  BlueBeamNative.pro  BlueLinkManager.pro  CMakeLists.txt  CONTRIBUTING.md  Info.plist  LICENSE  README.md  app_log.txt  build_installer.sh  error.cpp  error.h  jest.config.js  main.js  notarize_macos.sh  package.json  preload.js  qml.qrc  security_check.sh  sign_windows.sh  spec.json  specs.json  tailwind.config.js
core/bluetooth/: Cargo.toml
core/bluetooth/src/: lib.rs
core/crypto/: Cargo.toml
crypto/: crypto.cpp  crypto.h
db/: database.cpp  database.h
docs/: TROUBLESHOOTING.md  USER_MANUAL.md
installer_src/: config.xml  control.js  style.qss
installer_src/pages/: CompletionPage.qml  InstallationDirectoryPage.qml  InstallationProgressPage.qml  LicenseAgreementPage.qml  OptionalFeaturesPage.qml  PreInstallationChecksPage.qml  WelcomePage.qml
public/: index.html
qml/: qml.qrc
rust/bluetooth/: Cargo.toml
rust/bluetooth/src/: connection.rs  device.rs  lib.rs  linux.rs  macos.rs  manager.rs  pairing.rs  transport.rs  windows.rs
rust/core/: Cargo.toml
rust/core/src/: error.rs  example.rs  lib.rs
rust/crypto/: Cargo.toml
rust/crypto/fuzz/: Cargo.toml
rust/crypto/fuzz/fuzz_targets/: encrypt_decrypt.rs  fingerprint.rs  pin.rs  shared_secret.rs
rust/crypto/src/: lib.rs
rust/database/: Cargo.toml
rust/database/src/: lib.rs
rust/settings/: Cargo.toml
rust/settings/src/: lib.rs
src/: App.js  bluelink_app.cpp  bluelink_app.h  main.c  main.cpp  store.js
src/bluetooth/: bluetoothManager.js  bluetooth_callbacks.h  bluetooth_linux.c  bluetooth_linux.h  bluetooth_macos.c  bluetooth_macos.h  bluetooth_macos.m  bluetooth_macos.mm  bluetooth_manager.c  bluetooth_manager.h  bluetooth_windows.c  bluetooth_windows.h  file_transfer_worker.cpp  file_transfer_worker.h
src/c/: sqlite3.c  sqlite3.h
src/components/: ChatWindow.js  DeviceDiscovery.js  FileTransferModal.js  Onboarding.js  Settings.js
src/cpp/: main.cpp
src/cpp/auto_update/: auto_update.cpp  auto_update.h
src/cpp/bluetooth/: bluetooth.cpp  bluetooth.h  bluetooth.mm
src/cpp/crypto/: crypto.cpp  crypto.h
src/cpp/database/: database.cpp  database.h
src/cpp/file_transfer/: file_transfer.cpp  file_transfer.h
src/cpp/messaging/: messaging.cpp  messaging.h
src/cpp/settings/: settings.cpp  settings.h
src/cpp/ui/: ui.cpp
src/cpp/ui/linux/: ui_linux.cpp  ui_linux.h
src/cpp/ui/macos/: ui_macos.h  ui_macos.mm
src/cpp/ui/windows/: App.xaml  App.xaml.cpp  App.xaml.h  ChatPage.xaml  ChatPage.xaml.cpp  ChatPage.xaml.h  DeviceDiscoveryPage.xaml  DeviceDiscoveryPage.xaml.cpp  DeviceDiscoveryPage.xaml.h  FileTransferPage.xaml  FileTransferPage.xaml.cpp  FileTransferPage.xaml.h  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  PairingPage.xaml  PairingPage.xaml.cpp  PairingPage.xaml.h  SettingsPage.xaml  SettingsPage.xaml.cpp  SettingsPage.xaml.h  WelcomePage.xaml  WelcomePage.xaml.cpp  WelcomePage.xaml.h  rust_ffi.h  ui_windows.cpp  ui_windows.h
src/crypto/: crypto.js  crypto_manager.c  crypto_manager.h
src/database/: db.js  db_manager.c  db_manager.h
src/event_loop/: event_loop.c  event_loop.h
src/file_transfer/: fileTransfer.js  file_transfer.c  file_transfer.h
src/notifications/: notification_manager.h  notification_manager.m
src/qml/: AdapterCard.qml  AdvancedSettings.qml  BluetoothSettings.qml  ChatScreen.qml  DashboardScreen.qml  DeviceCard.qml  DeviceListScreen.qml  FileTransferScreen.qml  GeneralSettings.qml  InputField.qml  MessageBubble.qml  PrimaryButton.qml  RecentDevicesCard.qml  SendButton.qml  SettingsScreen.qml  SideBar.qml  Theme.qml  Toast.qml  TopBar.qml  TypingIndicator.qml  main.qml
src/rust/bluetooth/: Cargo.toml
src/rust/bluetooth/src/: lib.rs
src/rust/core/: Cargo.toml
src/rust/core/src/: lib.rs
src/rust/crypto/: Cargo.toml
src/rust/crypto/src/: lib.rs
src/slices/: devicesSlice.js  messagesSlice.js  settingsSlice.js
src/ui/: ui.h  ui_manager.cpp  ui_manager.h
src/ui/linux/: ui_linux.cpp  ui_linux.h
src/ui/macos/: ui_macos.mm
src/ui/windows/: ui_windows.cpp
src/utils/: base64.c  base64.h  json_file_logger.cpp  json_file_logger.h
ui/: auto_update.h  file_transfer.cpp  main.cpp  messaging.cpp  messaging.h  settings.h  ui.h
ui/linux/: ui_linux.cpp  ui_linux.h
