[package]
name = "bluebeam_bluetooth"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
uuid = "1.0"
thiserror = "1.0"
async-trait = "0.1"
parking_lot = "0.12"
bluebeam_crypto = { path = "../crypto" }

[target.'cfg(target_os = "macos")'.dependencies]
corebluetooth = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.48", features = ["Devices_Bluetooth", "Devices_Bluetooth_Advertisement", "Devices_Bluetooth_GenericAttributeProfile", "Devices_Bluetooth_Rfcomm"] }

[target.'cfg(target_os = "linux")'.dependencies]
bluer = "0.16"