[package]
name = "bluebeam_settings"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["fs"] }
dirs = "5.0"
thiserror = "1.0"
bluebeam_crypto = { path = "../crypto" }