[package]
name = "bluebeam_bluetooth"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
bluer = { version = "0.16", optional = true }
uuid = { version = "1.0", features = ["v4"] }

[target.'cfg(target_os = "linux")'.dependencies]
bluer = "0.16"

[target.'cfg(target_os = "macos")'.dependencies]
corebluetooth = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
winrt = "0.4"