[package]
name = "bluebeam_core"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
crossbeam = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"
anyhow = "1.0"
bluebeam_bluetooth = { path = "../bluetooth" }
bluebeam_crypto = { path = "../crypto" }
rusqlite = "0.29"
chrono = "0.4"